--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Toby Lam
+title: Toby Lam's Blog
 email: greenone092@gmail.com
-description: Toby Lam's blog
+description: 
 # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://greenone092.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
