--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ github_username:  greenone092
 # Build settings
 theme: minima
 plugins:
-  - jekyll-feed
-  - jekyll-sitemap
+  - jekyll-last-modified-at
+  
 
 # Exclude from processing.
 # The following items will not be processed, by default.
