--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github_username:  greenone092
 # Build settings
 theme: minima
 plugins:
-
+  - jekyll-sitemap
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
