--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: greenone092@gmail.com
 description: On mathematics and tech
 
 baseurl: "" 
-url: "https://greenone092.github.io/" 
+url: "https://www.tobylam.xyz" 
 github_username:  greenone092
 
 # Build settings
