--- a/_config.yml
+++ b/_config.yml
@@ -7,5 +7,12 @@ baseurl: ""
 url: "https://www.tobylam.xyz" 
 github_username:  greenone092
 
-# Build settings
-theme: minima
+remote_theme: jekyll/minima@3cdd14dff1216f561c68329e0b7420c2dc9b796a
+
+minima:
+  skin: dark
+  social_links:
+    github: greenone092
+    linkedin: toby-lam-3ba386193
+    youtube_channel: UCkC3ZMvxMng4xlTXaTb6jgQ
+    youtube_channel_name: Toby Lam
