No more dark skin, made mathjax optional

--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,11 @@ github_username:  greenone092
 remote_theme: jekyll/minima@3cdd14dff1216f561c68329e0b7420c2dc9b796a
 
 minima:
-  skin: dark
   social_links:
     github: greenone092
     linkedin: toby-lam-3ba386193
     youtube_channel: UCkC3ZMvxMng4xlTXaTb6jgQ
     youtube_channel_name: Toby Lam
+
+# Build settings
+markdown: kramdown
