--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,13 @@ minima:
 
 # Build settings
 markdown: kramdown
+
+responsive_image:
+  template: _includes/responsive-image.html
+  sizes:
+    - width: 320
+    - width: 480
+    - width: 640
+    - width: 960
+    - width: 1280
+    - width: 1600
