Changed mathjax js again

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 title: Toby Lam's Blog
 email: greenone092@gmail.com
-description: On mathematics and tech
+description: A blog on mathematics and tech
 
 baseurl: "" 
 url: "https://www.tobylam.xyz" 
